// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders proper HTML 1`] = `

<span class="ais-snippet">
  con
  <em>
    ten
  </em>
  t
</span>

`;

exports[`should render an empty string if attribute is not snippeted 1`] = `

<span class="ais-snippet">
</span>

`;
